Bug 1404999, force command updating to be enabled when a menu is opened, r=mconley